[lib]
proc-macro = true

[package]
name = "positionable"
description = "A macro to remove the boilerplate around defining attributes with required traits for Lat/Lng in the sphere-knn crate"
license = "MIT"
edition = "2021"
version = "0.1.0"
repository = "https://github.com/nrakochy/sphere-knn"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = "1.0.35"
syn = "2.0.48"
proc-macro2 = "1.0.78"
